--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "groq-sdk": "^0.7.0",
     "lucide-react": "^0.460.0",
     "mammoth": "^1.8.0",
-    "next": "15.1.5",
+    "next": "^15.5.9",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
